# py-ipfs-car-decoder

./: .gitignore  .pylintrc  README.rst  setup.cfg
.github/workflows/: python-pytest.yaml
ipfs_car_decoder/: __init__.py  async_stream.py  decoder.py
tests/: test_car.py
