[metadata]
name = ipfs_car_decoder
author = kralverde
description = Pure python implementation of a ipfs CAR block decoder.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kralverde/py-ipfs-car-decoder/
project_urls =
    Bug Tracker = https://github.com/kralverde/py-ipfs-car-decoder/issues
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    attrs
    dag_cbor
    unix_fs_exporter
    multiformats

[options.package_data]
* = py.typed

[options.packages.find]
exclude = tests
